--- a/main.ipynb
+++ b/main.ipynb
@@ -440,6 +440,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99       980\n",
+      "           1       0.99      1.00      0.99      1135\n",
+      "           2       0.99      0.99      0.99      1032\n",
+      "           3       0.99      0.99      0.99      1010\n",
+      "           4       0.98      0.99      0.99       982\n",
+      "           5       0.99      0.99      0.99       892\n",
+      "           6       1.00      0.97      0.98       958\n",
+      "           7       0.99      0.98      0.99      1028\n",
+      "           8       0.99      0.99      0.99       974\n",
+      "           9       0.97      0.99      0.98      1009\n",
+      "\n",
+      "    accuracy                           0.99     10000\n",
+      "   macro avg       0.99      0.99      0.99     10000\n",
+      "weighted avg       0.99      0.99      0.99     10000\n",
+      "\n",
+      "[[ 974    1    2    1    0    2    0    0    0    0]\n",
+      " [   0 1130    1    1    0    1    0    1    1    0]\n",
+      " [   1    1 1021    0    1    0    0    8    0    0]\n",
+      " [   0    1    2  997    0    5    0    0    3    2]\n",
+      " [   0    0    0    0  969    0    1    0    0   12]\n",
+      " [   1    0    0    7    0  882    1    0    0    1]\n",
+      " [   7    4    0    0   10    3  932    0    2    0]\n",
+      " [   1    2    8    0    0    0    0 1010    0    7]\n",
+      " [   2    0    2    1    0    1    1    1  960    6]\n",
+      " [   0    0    0    0    5    1    0    2    1 1000]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "y_pred = np.argmax(y_pred, axis=1)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
